<resources>
    <string name="app_name">TP3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_the_app">TheAppActivity</string>
    <string name="act_login_title">Login page</string>
    <string name="form_password">Password</string>
    <string name="act_login_button">Login</string>
    <string name="form_email">Email</string>
    <string name="act_main_subscribe_button">Register</string>
    <string name="act_main_login_button">Login</string>
    <string name="act_subscribe_title">Registration</string>
    <string name="act_subscribe_form_name">Name</string>
    <string name="act_subscribe_button">Register</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_oups">Error oups</string>
    <string name="form_empty">Empty form</string>
    <string name="act_new_group_name">Group name</string>
    <string name="act_new_group_emails_guest">New Group Emails</string>
    <string name="act_new_group_button">New group</string>
    <string name="action_add_group">Add group</string>
    <string name="action_logout">Log out</string>
    <string name="act_login_error">Login error</string>
    <string name="error_server_off">Can\'t reach server</string>
    <string name="error_user_exist">User already exists</string>
    <string name="act_the_app_welcome">Welcome !</string>
    <string name="dialog_exit_msg">Do you want to exit ?</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error_wrong_login">Wrong login</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="act_message_title">Group message page</string>
    <string name="act_message_button">Send message</string>
    <string name="empty_msg">No message submitted</string>
</resources>
