<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ecolem_test.tp3.RegActivity">

    <TextView android:text="@string/act_subscribe_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_subscribe_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/act_subscribe_form_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/act_subscribe_password"
        android:hint="@string/form_password"
        android:layout_below="@+id/act_subscribe_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/act_subscribe_email"
        android:layout_alignEnd="@+id/act_subscribe_email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_subscribe_button"
        android:id="@+id/act_subscribe_button"
        android:onClick="onClickSubscribe"
        android:layout_below="@+id/act_subscribe_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/act_subscribe_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_subscribe_email"
        android:layout_below="@+id/act_subscribe_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/form_email" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/togglePasswordVisibility"
        android:button="@drawable/checkbox_show_password_style"
        android:background="@null"
        android:onClick="toggleVisibility"
        android:paddingRight="10dp"
        android:paddingLeft="0dp"
        android:layout_alignBaseline="@+id/act_subscribe_password"
        android:layout_alignBottom="@+id/act_subscribe_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
