<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ecolem_test.tp3.LoginActivity">

    <TextView android:text="@string/act_login_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_login_password"
        android:hint="@string/form_password"
        android:layout_below="@+id/act_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/act_login_email"
        android:layout_alignEnd="@+id/act_login_email"
        android:paddingEnd="40dp"
        android:paddingStart="5dp"
        tools:targetApi="jelly_bean_mr1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_button"
        android:id="@+id/act_login_button"
        android:onClick="onClickLogin"
        android:layout_below="@+id/act_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_login_email"
        android:hint="@string/form_email"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/togglePasswordVisibility"
        android:button="@drawable/checkbox_show_password_style"
        android:background="@null"
        android:onClick="toggleVisibility"
        android:paddingRight="10dp"
        android:paddingLeft="0dp"
        android:layout_alignBaseline="@+id/act_login_password"
        android:layout_alignBottom="@+id/act_login_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
